2010-04-03  Armin Burgmeier  <armin@arbur.net>

	* gtk/gtkmm.h: Ifdef out inclusion of files that are no longer
	installed on Windows.

2010-04-03  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
	* MSVC_Net2008/gtkmm/gtkmm.vcproj: Add the new source files to the
	projects.

2.20.0:

2010-03-23  Murray Cumming  <murrayc@murrayc.com>

    Fix small API problems found by Jonathan Jongsma.
 
	* tools/extra_defs_gen/generate_defs_gtk.cc: Add ToolPalette, ToolItemGroup, 
    OffscreenWindow.
	* gtk/src/gtk_signals.defs: Add new .defs.

	* gtk/src/offscreenwindow.hg: Added const versions of get_pixbuf() and 
    get_pixmap() 
	* gtk/src/range.hg: Make get_slider_range() const.
	* gtk/src/spinner.hg:
	* gtk/src/toolitemgroup.hg: Add @newin tags.
	* gtk/src/toolpalette.hg: Fix a double @@ in the newin tag.
    Remove exclusive property (it is really a child property).
    Derive from (and implement) ToolShell.

2010-03-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/toolpalette.hg: Added a const version of get_drop_item().

2010-03-19  Murray Cumming  <murrayc@murrayc.com>

    Regenerated C documentation XML files.

	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Regenerated.

2010-03-18  Murray Cumming  <murrayc@murrayc.com>

    Demo: Fix use of deprecated API.

	* configure.ac: Add PANGOMM to the list of deprecations to check for.
	* demos/Makefile.am: Add GTKMM's own deprecation defines so we don't ever use
    deprecated API in this code.
	* demos/gtk-demo/example_colorsel.cc:
	* demos/gtk-demo/example_uimanager.cc: Correct use of deprecated API.

2.19.7:

2010-03-17  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/screen.hg: Added get_primary_monitor().

2010-03-17  Murray Cumming  <murrayc@murrayc.com>

    Added some methods.

	* gdk/src/gdk_pixbuf.defs: Regenerated and moved to gdk_pixbuf_methods.defs.
    * gdk/src/filelist.am:
    * gdk/src/gdk.defs: Updated appropriately.