@@ -3,7 +3,7 @@
 ; Author         Cedric Gustin <cedric.gustin@swing.be>
 
 ;    Copyright (C) 2004-2006  Cedric Gustin
-;                  2008       Armin Burgmeier
+;                  2008-2010  Armin Burgmeier
 ;
 ;    This program is free software; you can redistribute it and/or modify
 ;    it under the terms of the GNU General Public License as published by
@@ -34,7 +34,7 @@
 !define PRODUCT_VERSION_MICRO "@GTKMM_MICRO_VERSION@"
 !endif
 !ifndef PRODUCT_VERSION_INSTALLER
-!define PRODUCT_VERSION_INSTALLER "2"
+!define PRODUCT_VERSION_INSTALLER "1"
 !endif
 
 !ifdef PRODUCT_API_VERSION
@@ -216,13 +216,13 @@ Section "Runtime" SecGTKRuntime
   ; These break when stripped, therefore we always load them from bin/
   File bin\zlib1.dll
   File bin\intl.dll
-  File bin\charset.dll
-  File bin\iconv.dll
+;  File bin\charset.dll
+;  File bin\iconv.dll
 
   File ${BINDIR}\libxml2-2.dll
-  File ${BINDIR}\libjpeg-7.dll
-  File ${BINDIR}\libpng12-0.dll
-  File ${BINDIR}\libtiff-3.dll
+;  File ${BINDIR}\libjpeg-7.dll
+  File ${BINDIR}\libpng14-14.dll
+;  File ${BINDIR}\libtiff-3.dll
   File ${BINDIR}\freetype6.dll
   File ${BINDIR}\libexpat-1.dll
   File ${BINDIR}\libfontconfig-1.dll
@@ -249,7 +249,7 @@ Section "Runtime" SecGTKRuntime
 
   SetOutPath $INSTDIR\lib\gtk-2.0\2.10.0
   File /r lib\gtk-2.0\2.10.0\engines
-  File /r lib\gtk-2.0\2.10.0\loaders
+;  File /r lib\gtk-2.0\2.10.0\loaders
 
   SetOutPath $INSTDIR\lib\gtk-2.0
   File /r lib\gtk-2.0\modules
@@ -261,10 +261,10 @@ Section "Runtime" SecGTKRuntime
   ; TODO: Add others... libiconv, fontconfig, libxml2, tiff... however note
   ; that some contain devel-only things.
   SetOutPath $INSTDIR\share\doc
-  File /r share\doc\glib-2.22.3
-  File /r share\doc\cairo_1.8.8-3_win32
-  File /r share\doc\pango-1.26.1
-  File /r share\doc\gtk+-2.18.5
+  File /r share\doc\glib-2.24.0
+  File /r share\doc\cairo_1.8.10-1_win32
+  File /r share\doc\pango-1.28.0
+  File /r share\doc\gtk+-2.20.0
 
   SetOutPath $INSTDIR\share
   File /r share\locale
@@ -278,13 +278,13 @@ Section "Runtime" SecGTKRuntime
   ; These are broken when stripped:
   File bin\zlib1.dll
   File bin\intl.dll
-  File bin\charset.dll
-  File bin\iconv.dll
+;  File bin\charset.dll
+;  File bin\iconv.dll
 
   File bin_stripped\libxml2-2.dll
-  File bin_stripped\libjpeg-7.dll
-  File bin_stripped\libpng12-0.dll
-  File bin_stripped\libtiff-3.dll
+;  File bin_stripped\libjpeg-7.dll
+  File bin_stripped\libpng14-14.dll
+;  File bin_stripped\libtiff-3.dll
   File bin_stripped\freetype6.dll
   File bin_stripped\libexpat-1.dll
   File bin_stripped\libfontconfig-1.dll
@@ -318,7 +318,7 @@ Section "Development" SecGTKDevelopment
   SetOutPath $INSTDIR\bin
 
   ; Again, we always use the non-stripped version here since stripping breaks it
-  File bin\iconv.exe
+;  File bin\iconv.exe
 
   ; These are only useful to developers
   File ${BINDIR}\pkg-config.exe
@@ -336,7 +336,7 @@ Section "Development" SecGTKDevelopment
   File /r include\libxml2
   File /r include\freetype2
   File /r include\fontconfig
-  File /r include\libpng12
+  File /r include\libpng14
   File /r include\glib-2.0
   File /r include\cairo
   File /r include\atk-1.0
@@ -348,20 +348,20 @@ Section "Development" SecGTKDevelopment
   File include\expat.h
   File include\expat_external.h
   File include\ft2build.h
-  File include\iconv.h
-  File include\jconfig.h
-  File include\jerror.h
-  File include\jmorecfg.h
-  File include\jpeglib.h
-  File include\libcharset.h
-  File include\localcharset.h
+;  File include\iconv.h
+;  File include\jconfig.h
+;  File include\jerror.h
+;  File include\jmorecfg.h
+;  File include\jpeglib.h
+;  File include\libcharset.h
+;  File include\localcharset.h
   File include\libintl.h
   File include\png.h
   File include\pngconf.h
-  File include\tiff.h
-  File include\tiffconf.h
-  File include\tiffio.h
-  File include\tiffvers.h
+;  File include\tiff.h
+;  File include\tiffconf.h
+;  File include\tiffio.h
+;  File include\tiffvers.h
   File include\zconf.h
   File include\zlib.h
 
@@ -377,18 +377,18 @@ Section "Development" SecGTKDevelopment
   SetOutPath $INSTDIR\lib
   File lib\libxml2.lib
   File lib\libxml2.dll.a
-  File lib\charset.lib
-  File lib\iconv.lib
-  File lib\libiconv.a
+;  File lib\charset.lib
+;  File lib\iconv.lib
+;  File lib\libiconv.a
   File lib\intl.def
   File lib\intl.lib
   File lib\libintl.dll.a
 ;  File lib\libtiff.def Is no longer provided by the bundle since 2.16.6
 ;  File lib\libtiff.lib Is no longer provided by the bundle since 2.16.6
-  File lib\libtiff.dll.a
+;  File lib\libtiff.dll.a
   File lib\libpng.def
   File lib\libpng.lib
-  File lib\libpng12.dll.a
+  File lib\libpng14.dll.a
   File lib\zlib.def
   File lib\zdll.lib
   File lib\libz.a
@@ -447,7 +447,7 @@ Section "Development" SecGTKDevelopment
   SetOutPath $INSTDIR\lib\pkgconfig
   File lib\pkgconfig\libxml-2.0.pc
   File lib\pkgconfig\libpng.pc
-  File lib\pkgconfig\libpng12.pc
+  File lib\pkgconfig\libpng14.pc
   File lib\pkgconfig\freetype2.pc
   File lib\pkgconfig\fontconfig.pc
   File lib\pkgconfig\glib-2.0.pc
@@ -477,9 +477,9 @@ Section "Development" SecGTKDevelopment
   File lib\pkgconfig\gail.pc
 
   SetOutPath $INSTDIR\share\doc
-  File /r share\doc\glib-dev-2.22.3
-  File /r share\doc\pango-dev-1.26.1
-  File /r share\doc\gtk+-dev-2.18.5
+  File /r share\doc\glib-dev-2.24.0
+  File /r share\doc\pango-dev-1.28.0
+  File /r share\doc\gtk+-dev-2.20.0
 
   SetOutPath $INSTDIR\share\xml
   File /r share\xml\libglade
@@ -500,8 +500,8 @@ Section "Documentation" SecGTKDocumentation
   SectionIn 1
   SetOverwrite ifnewer
   
-  SetOutPath $INSTDIR\share\doc
-  File /r share\doc\libiconv
+;  SetOutPath $INSTDIR\share\doc
+;  File /r share\doc\libiconv
 
   SetOutPath $INSTDIR\share\gtk-doc\html
   File /r share\gtk-doc\html\libxml2
@@ -573,7 +573,7 @@ Section "Documentation" SecSigcDocumentation
   
   SetOutPath $INSTDIR\share\doc
   
-  File /r share\doc\libsigc-2.0
+  File /r share\doc\libsigc++-2.0
   
 SectionEnd
 !endif
@@ -631,7 +631,7 @@ Section "Documentation" SecCairommDocumentation
   SetOverwrite ifnewer
 
   SetOutPath $INSTDIR\share\doc
-  File /r share\doc\libcairomm-1.0
+  File /r share\doc\cairomm-1.0
 
 SectionEnd
 !endif
@@ -1139,26 +1139,26 @@ Section -Post SecPost
   IfFileExists "$INSTDIR\share\gtk-doc\html\gail-libgail-util\index.html" "" +2
        CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\libgail-util Reference Manual.lnk" "$INSTDIR\share\gtk-doc\html\gail-libgail-util\index.html"
 
-  IfFileExists "$INSTDIR\share\doc\libsigc-2.0\docs\reference\html\index.html" "" +2
-       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\libsigc++ Reference Manual.lnk" "$INSTDIR\share\doc\libsigc-2.0\docs\reference\html\index.html"
+  IfFileExists "$INSTDIR\share\doc\libsigc++-2.0\index.html" "" +2
+       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\libsigc++ Reference Manual.lnk" "$INSTDIR\share\doc\libsigc++-2.0\index.html"
 
-  IfFileExists "$INSTDIR\share\doc\libcairomm-1.0\reference\html\index.html" "" +2
-       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\cairomm Reference Manual.lnk" "$INSTDIR\share\doc\libcairomm-1.0\reference\html\index.html"
+  IfFileExists "$INSTDIR\share\doc\cairomm-1.0\reference\html\index.html" "" +2
+       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\cairomm Reference Manual.lnk" "$INSTDIR\share\doc\cairomm-1.0\reference\html\index.html"
 
-  IfFileExists "$INSTDIR\share\doc\glibmm-2.4\docs\reference\html\index.html" "" +2
-       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\glibmm Reference Manual.lnk" "$INSTDIR\share\doc\glibmm-2.4\docs\reference\html\index.html"
+  IfFileExists "$INSTDIR\share\doc\glibmm-2.4\reference\html\index.html" "" +2
+       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\glibmm Reference Manual.lnk" "$INSTDIR\share\doc\glibmm-2.4\reference\html\index.html"
 
-  IfFileExists "$INSTDIR\share\doc\pangomm-1.4\docs\reference\html\index.html" "" +2
-       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\pangomm Reference Manual.lnk" "$INSTDIR\share\doc\pangomm-1.4\docs\reference\html\index.html"
+  IfFileExists "$INSTDIR\share\doc\pangomm-1.4\reference\html\index.html" "" +2
+       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\pangomm Reference Manual.lnk" "$INSTDIR\share\doc\pangomm-1.4\reference\html\index.html"
 
-  IfFileExists "$INSTDIR\share\doc\gtkmm-2.4\docs\reference\html\index.html" "" +2
-       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\gtkmm Reference Manual.lnk" "$INSTDIR\share\doc\gtkmm-2.4\docs\reference\html\index.html"
+  IfFileExists "$INSTDIR\share\doc\gtkmm-2.4\reference\html\index.html" "" +2
+       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\gtkmm Reference Manual.lnk" "$INSTDIR\share\doc\gtkmm-2.4\reference\html\index.html"
 
   IfFileExists "$INSTDIR\share\doc\gnomemm-2.6\libglademm-2.4\docs\reference\html\index.html" "" +2
        CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\libglademm Reference Manual.lnk" "$INSTDIR\share\doc\gnomemm-2.6\libglademm-2.4\docs\reference\html\index.html"     
 
-  IfFileExists "$INSTDIR\share\doc\libxml++-2.6\docs\reference\2.22\html\index.html" "" +2
-       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\libxml++ Reference Manual.lnk" "$INSTDIR\share\doc\libxml++-2.6\docs\reference\2.22\html\index.html"
+  IfFileExists "$INSTDIR\share\doc\libxml++-2.6\reference\html\index.html" "" +2
+       CreateShortCut "$SMPROGRAMS\$ICONS_GROUP\Documentation\libxml++ Reference Manual.lnk" "$INSTDIR\share\doc\libxml++-2.6\reference\html\index.html"
 
   IfFileExists "$INSTDIR\gtkmm-demo\gtkmm-demo.exe" "" +11
        Push $OUTDIR
@@ -1309,13 +1309,13 @@ continue:
   ; redist
   Delete $INSTDIR\redist\zlib1.dll
   Delete $INSTDIR\redist\intl.dll
-  Delete $INSTDIR\redist\iconv.dll
-  Delete $INSTDIR\redist\charset.dll
+;  Delete $INSTDIR\redist\iconv.dll
+;  Delete $INSTDIR\redist\charset.dll
 
   Delete $INSTDIR\redist\libxml2-2.dll
-  Delete $INSTDIR\redist\libjpeg-7.dll
-  Delete $INSTDIR\redist\libpng12-0.dll
-  Delete $INSTDIR\redist\libtiff-3.dll
+;  Delete $INSTDIR\redist\libjpeg-7.dll
+  Delete $INSTDIR\redist\libpng14-14.dll
+;  Delete $INSTDIR\redist\libtiff-3.dll
   Delete $INSTDIR\redist\freetype6.dll
   Delete $INSTDIR\redist\libexpat-1.dll
   Delete $INSTDIR\redist\libfontconfig-1.dll
@@ -1353,7 +1353,7 @@ continue:
 
   ; bin
 
-  Delete $INSTDIR\bin\iconv.exe
+;  Delete $INSTDIR\bin\iconv.exe
   Delete $INSTDIR\bin\pkg-config.exe
   Delete $INSTDIR\bin\glib-genmarshal.exe
   Delete $INSTDIR\bin\glib-gettextize
@@ -1369,7 +1369,7 @@ continue:
   RMDir /r $INSTDIR\include\libxml2
   RMDir /r $INSTDIR\include\freetype2
   RMDir /r $INSTDIR\include\fontconfig
-  RMDir /r $INSTDIR\include\libpng12
+  RMDir /r $INSTDIR\include\libpng14
   RMDIR /r $INSTDIR\include\glib-2.0
   RMDIR /r $INSTDIR\include\cairo
   RMDIR /r $INSTDIR\include\atk-1.0
@@ -1380,20 +1380,20 @@ continue:
   Delete $INSTDIR\include\expat.h
   Delete $INSTDIR\include\expat_external.h
   Delete $INSTDIR\include\ft2build.h
-  Delete $INSTDIR\include\iconv.h
-  Delete $INSTDIR\include\jconfig.h
-  Delete $INSTDIR\include\jerror.h
-  Delete $INSTDIR\include\jmorecfg.h
-  Delete $INSTDIR\include\jpeglib.h
-  Delete $INSTDIR\include\libcharset.h
-  Delete $INSTDIR\include\localcharset.h
+;  Delete $INSTDIR\include\iconv.h
+;  Delete $INSTDIR\include\jconfig.h
+;  Delete $INSTDIR\include\jerror.h
+;  Delete $INSTDIR\include\jmorecfg.h
+;  Delete $INSTDIR\include\jpeglib.h
+;  Delete $INSTDIR\include\libcharset.h
+;  Delete $INSTDIR\include\localcharset.h
   Delete $INSTDIR\include\libintl.h
   Delete $INSTDIR\include\png.h
   Delete $INSTDIR\include\pngconf.h
-  Delete $INSTDIR\include\tiff.h
-  Delete $INSTDIR\include\tiffconf.h
-  Delete $INSTDIR\include\tiffio.h
-  Delete $INSTDIR\include\tiffvers.h
+;  Delete $INSTDIR\include\tiff.h
+;  Delete $INSTDIR\include\tiffconf.h
+;  Delete $INSTDIR\include\tiffio.h
+;  Delete $INSTDIR\include\tiffvers.h
   Delete $INSTDIR\include\zconf.h
   Delete $INSTDIR\include\zlib.h
 
@@ -1425,12 +1425,12 @@ continue:
 
   Delete $INSTDIR\lib\libxml2.lib
   Delete $INSTDIR\lib\libxml2.dll.a
-  Delete $INSTDIR\lib\charset.lib
-  Delete $INSTDIR\lib\iconv.lib
-  Delete $INSTDIR\lib\libiconv.a
+;  Delete $INSTDIR\lib\charset.lib
+;  Delete $INSTDIR\lib\iconv.lib
+;  Delete $INSTDIR\lib\libiconv.a
   Delete $INSTDIR\lib\libintl.dll.a
-  Delete $INSTDIR\lib\libtiff.dll.a
-  Delete $INSTDIR\lib\libpng12.dll.a
+;  Delete $INSTDIR\lib\libtiff.dll.a
+  Delete $INSTDIR\lib\libpng14.dll.a
   Delete $INSTDIR\lib\libz.a
   Delete $INSTDIR\lib\libfreetype.dll.a
   Delete $INSTDIR\lib\libexpat.dll.a
@@ -1517,7 +1517,7 @@ continue:
 
   Delete $INSTDIR\lib\pkgconfig\libxml-2.0.pc
   Delete $INSTDIR\lib\pkgconfig\libpng.pc
-  Delete $INSTDIR\lib\pkgconfig\libpng12.pc
+  Delete $INSTDIR\lib\pkgconfig\libpng14.pc
   Delete $INSTDIR\lib\pkgconfig\freetype2.pc
   Delete $INSTDIR\lib\pkgconfig\fontconfig.pc
   Delete $INSTDIR\lib\pkgconfig\glib-2.0.pc
@@ -1560,11 +1560,11 @@ continue:
 
   ; share
 
-  RMDir /r $INSTDIR\share\doc\libiconv
+;  RMDir /r $INSTDIR\share\doc\libiconv
 
-  RMDir /r $INSTDIR\share\doc\glib-dev-2.22.3
-  RMDir /r $INSTDIR\share\doc\pango-dev-1.26.1
-  RMDir /r $INSTDIR\share\doc\gtk+-dev-2.18.5
+  RMDir /r $INSTDIR\share\doc\glib-dev-2.24.0
+  RMDir /r $INSTDIR\share\doc\pango-dev-1.28.0
+  RMDir /r $INSTDIR\share\doc\gtk+-dev-2.20.0
 
   RMDir /r $INSTDIR\share\xml\libglade
   RMDir $INSTDIR\share\xml
@@ -1591,8 +1591,8 @@ continue:
   RMDir $INSTDIR\share\gtk-doc\html
   RMDir $INSTDIR\share\gtk-doc
 
-  RMDir /r $INSTDIR\share\doc\libsigc-2.0
-  RMDir /r $INSTDIR\share\doc\libcairomm-1.0
+  RMDir /r $INSTDIR\share\doc\libsigc++-2.0
+  RMDir /r $INSTDIR\share\doc\cairomm-1.0
   RMDir /r $INSTDIR\share\doc\glibmm-2.4
   RMDir /r $INSTDIR\share\doc\pangomm-1.4
   RMDir /r $INSTDIR\share\doc\gtkmm-2.4
@@ -1652,13 +1652,13 @@ continue:
 
   Delete $INSTDIR\bin\zlib1.dll
   Delete $INSTDIR\bin\intl.dll
-  Delete $INSTDIR\bin\iconv.dll
-  Delete $INSTDIR\bin\charset.dll
+;  Delete $INSTDIR\bin\iconv.dll
+;  Delete $INSTDIR\bin\charset.dll
 
   Delete $INSTDIR\bin\libxml2-2.dll
-  Delete $INSTDIR\bin\libjpeg-7.dll
-  Delete $INSTDIR\bin\libpng12-0.dll
-  Delete $INSTDIR\bin\libtiff-3.dll
+;  Delete $INSTDIR\bin\libjpeg-7.dll
+  Delete $INSTDIR\bin\libpng14-14.dll
+;  Delete $INSTDIR\bin\libtiff-3.dll
   Delete $INSTDIR\bin\freetype6.dll
   Delete $INSTDIR\bin\libexpat-1.dll
   Delete $INSTDIR\bin\libfontconfig-1.dll
@@ -1685,7 +1685,7 @@ continue:
 
   RMDir /r $INSTDIR\lib\gtk-2.0\2.10.0
   RMDir /r $INSTDIR\lib\gtk-2.0\modules
-  RMDir /r $INSTDIR\lib\gtk-2.0\loaders
+;  RMDir /r $INSTDIR\lib\gtk-2.0\loaders
   RMDir $INSTDIR\lib\gtk-2.0
   RMDir $INSTDIR\lib
   
@@ -1732,10 +1732,10 @@ continue:
   RMDir $INSTDIR\bin
   
   ; share (non-development files)
-  RMDir /r $INSTDIR\share\doc\glib-2.22.3
-  RMDir /r $INSTDIR\share\doc\cairo_1.8.8-3_win32
-  RMDir /r $INSTDIR\share\doc\pango-1.26.1
-  RMDir /r $INSTDIR\share\doc\gtk+-2.18.5
+  RMDir /r $INSTDIR\share\doc\glib-2.24.0
+  RMDir /r $INSTDIR\share\doc\cairo_1.8.10-1_win32
+  RMDir /r $INSTDIR\share\doc\pango-1.28.0
+  RMDir /r $INSTDIR\share\doc\gtk+-2.20.0
   RMDir $INSTDIR\share\doc
 
   RMdir /r $INSTDIR\share\locale
