@@ -12,7 +12,7 @@
 	/>
 	<Tool
 		Name="VCLinkerTool"
-		AdditionalDependencies="glademm-vc80-2_4.lib xml++-vc80-2_6.lib gtkmm-vc80-2_4.lib glade-2.0.lib gdkmm-vc80-2_4.lib atkmm-vc80-1_6.lib pangomm-vc80-1_4.lib giomm-vc80-2_4.lib glibmm-vc80-2_4.lib cairomm-vc80-1_0.lib sigc-vc80-2_0.lib gtk-win32-2.0.lib libxml2.lib gdk-win32-2.0.lib atk-1.0.lib gdk_pixbuf-2.0.lib pangowin32-1.0.lib pangocairo-1.0.lib pango-1.0.lib cairo.lib gio-2.0.lib gobject-2.0.lib gmodule-2.0.lib glib-2.0.lib intl.lib iconv.lib"
+		AdditionalDependencies="glademm-vc80-2_4.lib xml++-vc80-2_6.lib gtkmm-vc80-2_4.lib glade-2.0.lib gdkmm-vc80-2_4.lib atkmm-vc80-1_6.lib pangomm-vc80-1_4.lib giomm-vc80-2_4.lib glibmm-vc80-2_4.lib cairomm-vc80-1_0.lib sigc-vc80-2_0.lib gtk-win32-2.0.lib libxml2.lib gdk-win32-2.0.lib atk-1.0.lib gdk_pixbuf-2.0.lib pangowin32-1.0.lib pangocairo-1.0.lib pango-1.0.lib cairo.lib gio-2.0.lib gobject-2.0.lib gmodule-2.0.lib glib-2.0.lib intl.lib"
 		AdditionalLibraryDirectories="$(GTKMM_BASEPATH)\lib"
 	/>
 </VisualStudioPropertySheet>
