@@ -13,7 +13,7 @@ basepath=../..
 case $module in
     libsigc++)
 	# Path to extracted tarball or SVN checkout
-	sourcepath="${basepath}/libsigc++-2.2.4.2"
+	sourcepath="${basepath}/libsigc++-2.2.5"
 	# Basename of DLL
 	basename='sigc'
 	# Version tag of DLL name
@@ -24,14 +24,14 @@ case $module in
 	subdir='.'
 	;;
     glibmm)
-	sourcepath="${basepath}/glibmm-2.22.1"
+	sourcepath="${basepath}/glibmm-2.24.0"
 	basename='glibmm'
 	vername='2_4'
 	abiname='glibmm-2.4'
 	subdir='glibmm'
 	;;
     giomm)
-	sourcepath="${basepath}/glibmm-2.22.1"
+	sourcepath="${basepath}/glibmm-2.24.0"
 	basename='giomm'
 	vername='2_4'
 	abiname='giomm-2.4'
@@ -52,21 +52,21 @@ case $module in
 	subdir='pangomm'
 	;;
     atkmm)
-	sourcepath="${basepath}/gtkmm-2.18.2"
+	sourcepath="${basepath}/gtkmm-2.20.0"
 	basename='atkmm'
 	vername='1_6'
 	abiname='atkmm-1.6'
 	subdir='atkmm'
 	;;
     gdkmm)
-	sourcepath="${basepath}/gtkmm-2.18.2"
+	sourcepath="${basepath}/gtkmm-2.20.0"
 	basename='gdkmm'
 	vername='2_4'
 	abiname='gdkmm-2.4'
 	subdir='gdkmm'
 	;;
     gtkmm)
-	sourcepath="${basepath}/gtkmm-2.18.2"
+	sourcepath="${basepath}/gtkmm-2.20.0"
 	basename='gtkmm'
 	vername='2_4'
 	abiname='gtkmm-2.4'
@@ -80,7 +80,7 @@ case $module in
 	subdir='libglademm'
 	;;
     libxml++)
-	sourcepath="${basepath}/libxml++-2.26.1"
+	sourcepath="${basepath}/libxml++-2.30.0"
 	basename='xml++'
 	vername='2_6'
 	abiname='libxml++-2.6'
