@@ -1,5 +1,17 @@
 2010-04-03  Armin Burgmeier  <armin@arbur.net>
 
+	* win32_installer/gtkmm-vc80-2_4.vsprops:
+	* win32_installer/gtkmm-vc80-d-2_4.vsprops:
+	* win32_installer/gtkmm-vc90-2_4.vsprops:
+	* win32_installer/gtkmm-vc90-d-2_4.vsprops: Remove iconv.lib which is
+	no longer required by the libxml2 binary.
+
+	* win32_installer/install-msvc-module:
+	* win32_installer/gtkmm-installer.nsi.in: Update for the 2.20
+	installer.
+
+2010-04-03  Armin Burgmeier  <armin@arbur.net>
+
 	* gtk/gtkmm.h: Ifdef out inclusion of files that are no longer
 	installed on Windows.
 
